# twinleaf-web-ui

./: .gitignore  JAVASCRIPT.md  LICENSE  Makefile  README.md  package-lock.json  package.json  src-tauri  tsconfig.json
.github/workflows/: tauri-build.yml
desktop-tauri/: tauri.conf.json
desktop-tauri/src/: main.rs
desktop-web/: index.html  main-react.js  main.js  uplot-example.html
desktop-web/js/: twinleaf-web-ui.js
desktop-web/src/: app.tsx
experiments/: webserialtest.html  websocktest.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tio-rust/: Cargo.toml  README.md
tio-rust/tio/: Cargo.toml
tio-rust/tio-packet/: Cargo.toml
tio-rust/tio-packet/src/: lib.rs  parser.rs
tio-rust/tio-wasm/: Cargo.toml
tio-rust/tio-wasm/pkg/: package.json  tio_wasm.d.ts  tio_wasm.js  tio_wasm_bg.wasm  tio_wasm_bg.wasm.d.ts
tio-rust/tio-wasm/src/: lib.rs
tio-rust/tio-wasm/www/: basic.html  index.html  webserialtest.html
tio-rust/tio/src/: device.rs  lib.rs  slip.rs
web/: index.html  main.js  tauri_examples.js
web/css/: twinleaf-web-ui.css
web/js/: twinleaf-web-ui.js
web/src/: api.ts  app.tsx  hooks.ts  plot_components.tsx  plotting.ts
