[package]
name = "twinleaf-tio-desktop-sandbox"
version = "0.1.0"
description = "Example tauri-based (Rust) desktop application"
authors = ["Twinleaf <info@twinleaf.com>"]
license = "BSD 3-Clause License"
repository = ""
default-run = "twinleaf-tio-desktop-sandbox"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all", "system-tray"] }
# above this line are tauri generic; below are for Twinleaf
anyhow = "1.0"
serialport = { version = "4", default-features = false }
slip-codec = "0.3"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
