[package]
name = "tio-packet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "*"
# Not actually used:
#nom = { version = "7", default-features = false }

[dev-dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

